RESOLVED FIXED169939
REGRESSION(STP): rgb() with calc() containing variables doesn't work
https://bugs.webkit.org/show_bug.cgi?id=169939
Summary REGRESSION(STP): rgb() with calc() containing variables doesn't work
Greg Whitworth
Reported 2017-03-21 18:12:20 PDT
This is currently working in stable Safari but seems to have regressed: https://jsbin.com/metobigecu/1/edit?css,output Expected: Background is Green Actual: Red We discovered this while working on a demo for Microsoft Edge custom properties. FF fails due to no calc support in color functions and Chrome doesn't support float values in Calc(). Webkit seems to have the same issue for calc() but doesn't if you're using a variable. At any rate, would be great to see this fixed.
Attachments
Patch for EWS (851 bytes, patch)
2017-04-27 11:22 PDT, Dave Hyatt
no flags
Patch (3.22 KB, patch)
2017-05-04 07:53 PDT, Dave Hyatt
zalan: review+
Radar WebKit Bug Importer
Comment 1 2017-03-23 09:37:25 PDT
Dave Hyatt
Comment 2 2017-04-03 15:35:40 PDT
We brought consistency to this, so we fail whether you use a variable or not.
Dave Hyatt
Comment 3 2017-04-27 11:22:56 PDT
Created attachment 308413 [details] Patch for EWS
Dave Hyatt
Comment 4 2017-05-04 07:53:05 PDT
Dave Hyatt
Comment 5 2017-05-04 08:41:25 PDT
Landed in r216188.
Note You need to log in before you can comment on or make changes to this bug.