REGRESSION(STP): rgb() with calc() containing variables doesn't work https://bugs.webkit.org/show_bug.cgi?id=169939

Reviewed by Zalan Bujtas.

Source/WebCore:

Added new test in fast/css/variables.

* css/CSSCalculationValue.cpp:
(WebCore::CSSCalcExpressionNodeParser::parseValue):
Treat floats in calcs as integers when we can.

LayoutTests:

* fast/css/variables/calc-float-to-int-expected.html: Added.
* fast/css/variables/calc-float-to-int.html: Added.



Canonical link: https://commits.webkit.org/188569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216188 268f45cc-cd09-0410-ab3c-d52691b4dbfc